Bug 1663796: Make Accessible::AppendTextTo produce text even if an Accessible has no frame. r=eeejay

Otherwise, we fail to fire a text removed event when something becomes display: none.

Differential Revision: https://phabricator.services.mozilla.com/D159362